--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,33 @@
       <version>4.12</version>
     </dependency>
 
+    <!--引入pageHelper分页插件 -->
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>5.0.0</version>
+    </dependency>
+
+    <!-- 返回json字符串的支持 -->
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.8.8</version>
+    </dependency>
+
+    <!--JSR303数据校验支持；tomcat7及以上的服务器，
+		tomcat7以下的服务器：el表达式。额外给服务器的lib包中替换新的标准的el
+		-->
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>5.4.1.Final</version>
+    </dependency>
+
+
+
   </dependencies>
 
   <build>
